--- a/styles/style.css
+++ b/styles/style.css
@@ -162,7 +162,8 @@ h2 {
 .search-section__movie-container:hover,
 .favorite-section__movie-container:hover {
     cursor: pointer;
-    scale: 1.05;
+    scale: 1.03;
+    box-shadow: 0 0 0 1px black;
 }
 
 .toplist-section__favorite-icon,
