--- a/styles/style.css
+++ b/styles/style.css
@@ -35,10 +35,12 @@ h2 {
     background: var(--dark);
     max-width: 90rem;
     margin: 2rem auto;
+    padding: 2rem;
 }
 
 .header,
 .footer {
+    margin: 2rem 0;
     height: 25rem;
     display: flex;
     justify-content: center;
@@ -48,6 +50,7 @@ h2 {
     inset 0 0 0 2rem var(--red),
     inset 0 0 0 4rem var(--orange), 
     inset 0 0 0 6rem var(--yellow);
+    border: 2px solid var(--white);
     border-radius: 5rem;
 
 }
@@ -55,7 +58,6 @@ h2 {
 .header__title {
     font-size: clamp(2rem, 8vw, 10rem);
     font-weight: 900;
-    border-radius: 1rem;
     padding: 4rem;
     display: grid;
 }
@@ -64,10 +66,11 @@ h2 {
     background: var(--dark);
     color: var(--dark);
     border-radius: 1rem;
-    padding: 2rem;
+
 }
 
 .utility-bar {
+    margin: 2rem 0;
     padding: 1rem 0;
     position: sticky;
     background-color: var(--dark);
@@ -136,7 +139,8 @@ h2 {
     display: grid;
     gap: 2rem;
     grid-template-columns: repeat(4, 1fr);
-    padding: 2rem;
+    padding: 4rem 2rem;
+    margin: 5rem 0;
     background-color: var(--cream);
     border-radius: 1rem;
 }
