--- a/styles/style.css
+++ b/styles/style.css
@@ -41,32 +41,53 @@ h2 {
 .header,
 .footer {
     margin: 2rem 0;
-    height: 25rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: var(--dark);
+    /* background: var(--dark);
     box-shadow:
     inset 0 0 0 2rem var(--red),
     inset 0 0 0 4rem var(--orange), 
     inset 0 0 0 6rem var(--yellow);
-    border: 2px solid var(--white);
-    border-radius: 5rem;
+    border: 2px solid var(--white); */
 
 }
 
-.header__title {
+/* .header__title {
     font-size: clamp(2rem, 8vw, 10rem);
     font-weight: 900;
     padding: 4rem;
     display: grid;
+} */
+
+.header__title {
+    font-weight: 900;
+    display: grid;
+    transform: skew(-10deg);
 }
 
+.header__title-span1,
+.header__title-span3 {
+    background-color: var(--cream);
+    color: var(--dark);
+    font-size: 3rem;
+    justify-self: start;
+    padding: .5rem .5rem 0 .5rem;
+}
+.header__title-span2 {
+    background-color: var(--red);
+    font-size: 10rem;
+    padding: 1rem 1rem 0 1rem;
+    margin: .5rem;
+}
+
+.header__title-span3 {
+    justify-self: end;
+}
 .main {
     background: var(--dark);
     color: var(--dark);
-    border-radius: 1rem;
-
+    overflow: visible;
 }
 
 .utility-bar {
@@ -76,12 +97,13 @@ h2 {
     background-color: var(--dark);
     top: 0;
     z-index: 2;
+    overflow: visible;
 }
 
 .utility-bar__searchbar {
     background-color: var(--cream);
     padding: 1rem;
-    border-radius: .5rem;
+    overflow: visible;
 }
 
 .utility-bar__favorites-navigation-element {
@@ -89,34 +111,84 @@ h2 {
     color: var(--dark);
     background-color: var(--cream);
     padding: 1rem;
+    overflow: visible;
     text-decoration: none;
-    border-radius: .5rem;
 }
 .utility-bar__favorites-navigation-element:hover {
     color: var(--cream);
     background-color: var(--dark);
     border: 2px solid var(--cream);
+    overflow: visible;
 }
 .trailer-section {
+    position: relative;
+    z-index: 1;
     display: grid;
     gap: 1rem;
-    padding: 2rem;
-    border-radius: 1rem;
+    padding: 8rem 2rem;
     margin-bottom: 2rem;
     background-color: var(--cream);
     grid-template-columns: repeat(3, 1fr);
+    overflow: visible;
+}
+
+.trailer-section::before {
+    content: "";
+    width: 100%;
+    height: 20%;
+    position: absolute;
+    top:0;
+    background-color: var(--dark);
+    clip-path: polygon(0 0, 0 30%, 110% 0);
+}
+
+.trailer-section::after {
+    content: "";
+    width: 100%;
+    height: 20%;
+    position: absolute;
+    bottom: 0;
+    background-color: var(--dark);
+    clip-path: polygon(0 100%, 100% 60%, 110% 100%);
 }
 
 .trailer-section__title {
+    transform: skew(-10deg);
     grid-area: auto / auto / span 1 / span 3;
-    align-self: center;
+    display: grid;
+    position: absolute;
+    top: 0%;
+    overflow: visible;
+    z-index: 5;
+}
+
+.trailer-section__title-background {
+    overflow: visible;
+}
+
+.trailer-section__title-background--cream {
+    background-color: var(--cream);
+    font-size: 2rem;
+    z-index: 5;
+    justify-self: start;
+    overflow: visible;
+    margin-bottom: .3rem;
+    padding: .5rem .5rem 0 .5rem;
+}
+
+.trailer-section__title-background--orange {
+    font-size: 3rem;
+    background-color: var(--red);
+    color: var(--cream);
+    justify-self: start;
+    overflow: visible;
+    padding: .5rem .5rem 0 .5rem;
 }
 
 .trailer-section__video-player {
     grid-area: auto / auto / span 3 / span 3;
     width: 100%;
     aspect-ratio: 16/9;
-    border-radius: 1rem;
 }
 
 .trailer-section__navigation-button {
@@ -139,10 +211,10 @@ h2 {
     display: grid;
     gap: 2rem;
     grid-template-columns: repeat(4, 1fr);
-    padding: 4rem 2rem;
+    padding: 8rem 2rem;
     margin: 5rem 0;
+    clip-path: polygon(0 2%, 100% 0, 100% 98%, 0 100%);
     background-color: var(--cream);
-    border-radius: 1rem;
 }
 
 .toplist-section__title {
@@ -158,7 +230,6 @@ h2 {
     grid-template-columns: repeat(2, 1fr);
     background-color: var(--white);
     padding: 1rem;
-    border-radius: .5rem;
     transition: all .2s ease-in-out;
 }
 
@@ -186,8 +257,6 @@ h2 {
 .favorite-section__favorite-icon:hover {
     scale: 1.1;
 }
-
-
 
 .toplist-section__movie-title,
 .search-section__movie-title,
@@ -218,7 +287,6 @@ h2 {
     padding: 4rem 2rem;
     margin: 2rem;
     width: inherit;
-    border-radius: 1rem;
 }
 
 .more-info-container__info-wrapper {
@@ -264,7 +332,6 @@ h2 {
 .footer__home-navigation {
     font-size: clamp(2rem, 8vw, 10rem);
     font-weight: 900;
-    border-radius: 1rem;
     padding: 4rem;
     color: var(--cream);
     text-decoration: none;
@@ -333,6 +400,16 @@ h2 {
         font-size: 2rem;
     }
 
+    .header__title-span1,
+    .header__title-span3 {
+        font-size: 2rem;
+
+}
+    .header__title-span2 {
+        font-size: 5rem;
+
+}
+
     .toplist-section__title,
     .favorite-section__title {
         grid-area: auto / auto / auto / span 1;
@@ -341,13 +418,11 @@ h2 {
     .toplist-section,
     .search-section,
     .favorite-section {
-        padding: .5rem;
+        padding: 5rem .5rem;
         gap: .5rem;
     }
     .trailer-section {
-
         padding: 2rem .5rem;
-
     }
 
     .more-info-container {
