--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
 :root {
     --dark: #303030;
     --cream: #eddec4;
-    --white: #f7f1e6; 
+    --white: #f7f1e6;
     --beige: #fcf3b4;
     --light-yellow: #d1b867;
     --yellow: #e7a134;
@@ -13,6 +13,10 @@
 
     --hover: all .2s ease-in-out;
 
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 * {
@@ -38,7 +42,7 @@ h2 {
     max-width: 90rem;
     margin: 2rem auto;
     padding: 2rem;
-} 
+}
 
 .header,
 .footer {
@@ -47,25 +51,12 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background: var(--dark);
-    box-shadow:
-    inset 0 0 0 2rem var(--red),
-    inset 0 0 0 4rem var(--orange), 
-    inset 0 0 0 6rem var(--yellow);
-    border: 2px solid var(--white); */
-
 }
-
-/* .header__title {
-    font-size: clamp(2rem, 8vw, 10rem);
-    font-weight: 900;
-    padding: 4rem;
-    display: grid;
-} */
 
 .header__title {
     font-weight: 900;
     display: grid;
+    margin-bottom: 5rem;
     transform: skew(-10deg);
 }
 
@@ -77,6 +68,7 @@ h2 {
     justify-self: start;
     padding: .5rem .5rem 0 .5rem;
 }
+
 .header__title-span2 {
     background-color: var(--red);
     font-size: 10rem;
@@ -91,76 +83,91 @@ h2 {
 .main {
     background: var(--dark);
     color: var(--dark);
-    overflow: visible;
 }
 
 .utility-bar {
+    display: flex;
+    align-items: center;
     margin: 2rem 0;
     padding: 1rem 0;
     position: sticky;
     background-color: var(--dark);
     top: 0;
+    box-shadow: -2rem 0 0 var(--dark);
     z-index: 999;
-    overflow: visible;
 }
 
 .utility-bar__searchbar {
     background-color: var(--cream);
+    border: 1px solid var(--cream);
+    height: 3rem;
     padding: 1rem;
-    overflow: visible;
 }
 
-.utility-bar__favorites-navigation-element {
+.utility-bar__navigation-button {
+    display: inline-block;
+    text-align: center;
+    height: 3rem;
+    min-width: 6rem;
     margin-left: 1rem;
     color: var(--dark);
     background-color: var(--cream);
     padding: 1rem;
-    overflow: visible;
+    border: 2px solid var(--cream);
     text-decoration: none;
 }
-.utility-bar__favorites-navigation-element:hover {
+
+.utility-bar__navigation-button:hover {
     color: var(--cream);
     background-color: var(--dark);
     border: 2px solid var(--cream);
-    overflow: visible;
 }
+
 .trailer-section {
     position: relative;
     z-index: 5;
     display: grid;
     gap: 1rem;
     padding: 8rem 2rem;
-    margin-bottom: 2rem;
+    margin: 5rem 0;
     grid-template-columns: repeat(3, 1fr);
-
 }
 
-/* .trailer-section::before,
+.trailer-section::after {
+    transform: skewY(-8deg);
+    content: "";
+    width: 100%;
+    height: 90%;
+    position: absolute;
+    top: 10%;
+    left: 0;
+    background-color: var(--cream);
+}
+
 .toplist-section::before,
 .favorite-section::before,
 .search-section::before {
+    transform: skewY(8deg);
     content: "";
     width: 100%;
-    height: 20%;
+    height: 70%;
     position: absolute;
-    top:0;
-    background-color: var(--dark);
-    clip-path: polygon(0 0, 0 30%, 110% 0); 
-} */
+    top: 20%;
+    left: 0;
+    background-color: var(--red);
+}
 
-.trailer-section::after,
 .toplist-section::after,
 .favorite-section::after,
 .search-section::after {
-    transform: skewY(-2deg);
+    transform: skewY(-8deg);
     content: "";
     width: 100%;
-    height: 95%;
+    height: 90%;
     position: absolute;
-    top: 5%;
-    left:0;
+    top: 8%;
+    left: 0;
     background-color: var(--cream);
-    /* clip-path: polygon(0 100%, 100% 60%, 110% 100%); */
 }
 
 .trailer-section__title,
@@ -170,17 +177,10 @@ h2 {
     transform: skew(-10deg);
     grid-area: auto / auto / span 1 / span 3;
     display: grid;
-    position: absolute;
+    margin-bottom: 4rem;
+    position: relative;
     top: 0%;
-    overflow: visible;
     z-index: 10;
-}
-
-.trailer-section__title-background,
-.toplist-section__title-background,
-.favorite-section__title-background,
-.search-section__title-background {
-    overflow: visible;
 }
 
 .trailer-section__title-background--top,
@@ -212,31 +212,52 @@ h2 {
     aspect-ratio: 16/9;
 }
 
+.trailer-section__navigation-wrapper {
+    display: flex;
+    justify-content: space-around;
+    grid-area: auto / auto / auto / span 3;
+}
+
 .trailer-section__navigation-button {
     z-index: 5;
-    width: 50%;
-    height: 100%;
-
-}
-.trailer-section__navigation-button--left {
-    grid-area: 5 / 1 / auto / auto;
-}
-
-.trailer-section__navigation-button--right {
-    grid-area: 5 / 3 / auto / auto;
-    justify-self: end;
+    padding: 1rem;
+    font-weight: 600;
+    font-size: 1.5rem;
+    position: relative;
+    text-decoration: none;
+    background-color: var(--cream);
+    color: var(--dark);
+    transition: var(--hover);
 }
 
-.toplist-section, 
+.trailer-section__navigation-button:hover {
+    cursor: pointer;
+    scale: 1.05;
+}
+
+.trailer-section__trailer-counter {
+    z-index: 5;
+    padding: 1rem;
+    font-weight: 600;
+    font-size: 2rem;
+    position: relative;
+    text-decoration: none;
+    background-color: var(--cream);
+    color: var(--dark);
+}
+
+.toplist-section,
 .search-section,
 .favorite-section {
     position: relative;
     display: grid;
+    min-height: 70rem;
     gap: 2rem;
     grid-template-columns: repeat(4, 1fr);
     padding: 8rem 2rem;
     margin: 5rem 0;
 }
+
 
 .toplist-section__title,
 .favorite-section__title,
@@ -249,6 +270,7 @@ h2 {
 .favorite-section__movie-container {
     position: relative;
     z-index: 5;
+    aspect-ratio: 25/40;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(2, 1fr);
@@ -297,7 +319,6 @@ h2 {
 .toplist-section__image,
 .favorite-section__image {
     width: 100%;
-    aspect-ratio: 2/3;
     grid-area: auto / auto / span 4/ span 2;
     pointer-events: none;
 }
@@ -306,26 +327,52 @@ h2 {
 .favorite-section__button-wrapper {
     position: relative;
     z-index: 10;
-    display: flex;
+    display: grid;
     grid-area: auto / auto / auto/ span 4;
-    justify-content: space-around;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .toplist-section__navigation-button,
 .favorite-section__navigation-button {
+    justify-self: center;
     padding: 1rem;
     font-weight: 600;
     font-size: 1.5rem;
     position: relative;
     text-decoration: none;
     color: var(--dark);
-    z-index: 10;
+    background-color: var(--cream);
     transition: var(--hover);
+    z-index: 10;
+}
+
+.toplist-section__navigation-button--left,
+.favorite-section__navigation-button--left {
+    grid-area: auto / 1 / auto / 1;
+}
+
+.toplist-section__navigation-button--right,
+.favorite-section__navigation-button--right {
+    grid-area: auto / 3 / auto / 3;
 }
 
 .toplist-section__navigation-button:hover,
 .favorite-section__navigation-button:hover {
     scale: 1.05;
+}
+
+.toplist-section__page-counter,
+.favorite-section__page-counter {
+    grid-area: auto / 2 / auto / 2;
+    justify-self: center;
+    z-index: 5;
+    padding: 1rem;
+    font-weight: 600;
+    font-size: 2rem;
+    position: relative;
+    text-decoration: none;
+    background-color: var(--cream);
+    color: var(--dark);
 }
 
 
@@ -350,9 +397,11 @@ h2 {
 .more-info-container__title {
     grid-area: 1/1/auto/span 2;
 }
+
 .more-info-container__director {
     grid-area: 2/1/auto/span 2;
 }
+
 .more-info-container__actor {
     grid-area: 3/1/auto/span 2;
 }
@@ -360,6 +409,7 @@ h2 {
 .more-info-container__runtime {
     grid-area: 4/1/auto/span 1;
 }
+
 .more-info-container__rating {
     grid-area: 4/2/auto/span 2;
     justify-self: start;
@@ -389,11 +439,12 @@ h2 {
     text-decoration: none;
     align-self: center;
 }
+
 .d-none {
     display: none;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1200px) {
 
     .toplist-section__title,
     .favorite-section__title,
@@ -404,22 +455,24 @@ h2 {
     .toplist-section,
     .search-section,
     .favorite-section {
-    grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 
     .toplist-section__button-wrapper,
     .favorite-section__button-wrapper {
         grid-area: auto / auto / auto/ span 3;
     }
+
     .more-info-container {
-        grid-template-columns:  1fr;
+        grid-template-columns: 1fr;
     }
 }
 
 @media screen and (max-width: 890px) {
     .wrapper {
-        padding: 0 2rem;    
+        padding: 0 2rem;
     }
+
     .main {
         padding: 0;
     }
@@ -431,28 +484,30 @@ h2 {
         grid-area: auto / auto / auto / span 2;
     }
 
-.trailer-section__title-background--top,
-.toplist-section__title-background--top,
-.favorite-section__title-background--top,
-.search-section__title-background--top {
-    font-size: 1.5rem;
-    margin-bottom: .3rem;
-    padding: .5rem .5rem 0 .5rem;
-}
+    .trailer-section__title-background--top,
+    .toplist-section__title-background--top,
+    .favorite-section__title-background--top,
+    .search-section__title-background--top {
+        font-size: 1.5rem;
+        margin-bottom: .3rem;
+        padding: .5rem .5rem 0 .5rem;
+    }
 
-.trailer-section__title-background--bottom,
-.toplist-section__title-background--bottom,
-.favorite-section__title-background--bottom,
-.search-section__title-background--bottom {
-    font-size: 2rem;
-    padding: .5rem .5rem 0 .5rem;
-}
+    .trailer-section__title-background--bottom,
+    .toplist-section__title-background--bottom,
+    .favorite-section__title-background--bottom,
+    .search-section__title-background--bottom {
+        font-size: 2rem;
+        padding: .5rem .5rem 0 .5rem;
+    }
+
     .toplist-section,
     .search-section,
     .favorite-section {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
     }
+
     .toplist-section__button-wrapper,
     .favorite-section__button-wrapper {
         grid-area: auto / auto / auto/ span 2;
@@ -478,6 +533,7 @@ h2 {
         padding: .5rem .5rem;
         margin: 0;
     }
+
     h2 {
         font-size: 2rem;
     }
@@ -486,15 +542,16 @@ h2 {
     .header__title-span3 {
         font-size: 2rem;
 
-}
+    }
+
     .header__title-span2 {
         font-size: 5rem;
 
-}
+    }
 
-.toplist-section__title,
-.favorite-section__title,
-.search-section__title {
+    .toplist-section__title,
+    .favorite-section__title,
+    .search-section__title {
         grid-area: auto / auto / auto / span 2;
     }
 
@@ -504,6 +561,7 @@ h2 {
         padding: 5rem .5rem;
         gap: .5rem;
     }
+
     .trailer-section {
         padding: 2rem .5rem;
     }
@@ -517,7 +575,13 @@ h2 {
     .search-section__movie-container,
     .favorite-section__movie-container {
         padding: .5rem;
+        aspect-ratio: 25/41;
+    }
 
+    .toplist-section__movie-container:hover,
+    .search-section__movie-container:hover,
+    .favorite-section__movie-container:hover{
+        scale: 1.01;
     }
 
     .toplist-section__favorite-icon,
@@ -526,13 +590,19 @@ h2 {
         top: 1rem;
         right: 1rem;
     }
-
+    /* .toplist-section__movie-title,
+    .search-section__movie-title,
+    .favorite-section__movie-title {
+        margin-top: 20rem
+    } */
 }
 
 @media screen and (max-width: 400px) {
     .wrapper {
         max-width: 400px;
     }
+
+    .footer__home-navigation {
+        padding: 1rem;
+    }
 }
-
-
