--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
     --darker: #262625;
     --cream: #eddec4;
     --passpartou: #f7f1e6;
-    --red: #d24322;
+    --orange: #d24322;
 
     --hover: all .2s ease-in-out;
 }
@@ -22,6 +22,8 @@ html {
 }
 
 body {
+    margin: auto;
+    max-width: 1440px;
     background: var(--dark);
     color: var(--cream);
     font-family: 'Josefin Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -36,7 +38,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgb(79, 76, 76);
+    background: #4f4c4c;
     border-radius: 10px;
     border: 6px solid transparent;
     background-clip: content-box;
@@ -44,12 +46,15 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
     cursor: grab;
+    background-color: #727070;
+}
+
+::-webkit-scrollbar-thumb:active {
+    cursor: grabbing;
 }
 
 .wrapper {
-    color: var(--cream);
-    background: var(--dark);
-    max-width: 90rem;
+    max-width: 90%;
     margin: 2rem auto;
     padding: 2rem;
 }
@@ -66,28 +71,31 @@ body {
 .header__title {
     font-weight: 900;
     display: grid;
-    margin-bottom: 5rem;
     transform: skew(-10deg);
 }
 
-.header__title-span1,
-.header__title-span3 {
+.header__title--cream {
     background-color: var(--cream);
     color: var(--dark);
     font-size: clamp(2rem, 4vw, 3rem);
-    justify-self: start;
     padding: .5rem .5rem 0 .5rem;
 }
 
-.header__title-span2 {
-    background-color: var(--red);
-    font-size: clamp(5rem, 12vw, 12rem);
+.header__title--orange {
+    background-color: var(--orange);
+    font-size: clamp(5rem, 11vw, 12rem);
     padding: 1rem 1rem 0 1rem;
     margin: .5rem;
 }
 
-.header__title-span3 {
+.header__title--top {
+    justify-self: start;
+    align-self: end;
+}
+
+.header__title--bottom {
     justify-self: end;
+    margin-bottom: 5rem;
 }
 
 .main {
@@ -98,7 +106,7 @@ body {
 .utility-bar {
     display: grid;
     grid-template-columns: 1fr 9fr;
-    grid-template-rows: repeat(2,1fr);
+    grid-template-rows: repeat(2, 1fr);
     height: 5rem;
     align-items: center;
     padding: 1rem 0;
@@ -140,13 +148,13 @@ body {
 }
 
 .utility-bar__notification {
-
+    display: inline;
     max-width: 25rem;
     left: 0;
     grid-area: auto / auto / auto / span 2;
     border: 3px solid var(--dark);
-    border-left: 3px solid var(--red);
-    background-color: var(--red);
+    border-left: 3px solid var(--orange);
+    background-color: var(--orange);
     font-size: 2rem;
     padding: .5rem .5rem .2rem .5rem;
     opacity: 0;
@@ -200,7 +208,6 @@ body {
     position: relative;
     top: 0%;
     z-index: 10;
-
 }
 
 .trailer-section__title-background--top,
@@ -219,7 +226,7 @@ body {
 .favorite-section__title-background--bottom,
 .search-section__title-background--bottom {
     font-size: clamp(2rem, 6vw, 3rem);
-    background-color: var(--red);
+    background-color: var(--orange);
     color: var(--cream);
     justify-self: start;
     padding: .5rem .5rem 0 .5rem;
@@ -229,10 +236,10 @@ body {
     z-index: 5;
     grid-area: auto / auto / span 3 / span 4;
     justify-self: center;
-    width: 100%;
+    width: 90%;
+    max-height: 60vh;
     aspect-ratio: 16/9;
 }
-
 
 .toplist-section::before,
 .favorite-section::before,
@@ -261,7 +268,7 @@ body {
         "title title title title"
         "movie movie movie movie"
         "movie movie movie movie"
-        "navigation navigation navigation navigation";
+        "pagination pagination pagination pagination";
     padding: 8rem 2rem;
 }
 
@@ -281,7 +288,6 @@ body {
     top: 8%;
     left: 0;
     background-color: var(--cream);
-
 }
 
 .toplist-section__title,
@@ -316,6 +322,7 @@ body {
 .toplist-section__favorite-icon,
 .search-section__favorite-icon,
 .favorite-section__favorite-icon {
+    user-select: none;
     position: absolute;
     top: 2rem;
     right: 2rem;
@@ -344,6 +351,7 @@ body {
 .search-section__image,
 .toplist-section__image,
 .favorite-section__image {
+    user-select: none;
     width: 100%;
     grid-area: auto / auto / span 4/ span 2;
     pointer-events: none;
@@ -353,12 +361,12 @@ body {
 .trailer-section__navigation-wrapper,
 .toplist-section__navigation-wrapper,
 .favorite-section__navigation-wrapper {
-    font-size: clamp(1.3rem, 3vw, 2rem);
+    font-size: clamp(1.1rem, 3vw, 2rem);
     position: relative;
     z-index: 10;
     display: grid;
     grid-row: span 1;
-    grid-area: navigation;
+    grid-area: pagination;
     grid-template-columns: repeat(3, 1fr);
 }
 
@@ -371,6 +379,7 @@ body {
 .toplist-section__navigation-button,
 .favorite-section__navigation-button {
     justify-self: center;
+    align-self: center;
     padding: clamp(.3rem, 1vw, 1rem);
     font-weight: 600;
     position: relative;
@@ -421,7 +430,6 @@ body {
     color: var(--dark);
 }
 
-
 .more-info-container {
     z-index: 999;
     position: absolute;
@@ -432,6 +440,28 @@ body {
     padding: 4rem 2rem;
     margin: 2rem;
     width: inherit;
+}
+
+.more-info-container__close-button {
+    all: unset;
+    right: 2rem;
+    top: 2rem;
+    position: absolute;
+    width: fit-content;
+    height: fit-content;
+    padding: 1rem;
+    text-align: center;
+    background-color: var(--orange);
+    color: var(--cream);
+    font-weight: bold;
+    transition: var(--hover);
+}
+
+.more-info-container__close-button:hover {
+    color: var(--orange);
+    background-color: var(--cream);
+    cursor: pointer;
+    scale: 1.04;
 }
 
 .more-info-container__info-wrapper {
@@ -469,6 +499,7 @@ body {
 }
 
 .more-info-container__poster {
+    user-select: none;
     aspect-ratio: 3/2;
 }
 
@@ -501,7 +532,7 @@ body {
             "movie movie movie"
             "movie movie movie"
             "movie movie movie"
-            "navigation navigation navigation";
+            "pagination pagination pagination";
     }
 
     .toplist-section::before,
@@ -525,6 +556,7 @@ body {
         height: 90%;
         top: 10%;
     }
+
     .trailer-section::after {
         transform: skewY(-9deg);
         height: 88%;
@@ -554,7 +586,7 @@ body {
             "movie movie "
             "movie movie "
             "movie movie "
-            "navigation navigation";
+            "pagination pagination";
     }
 
     .trailer-section::before {
@@ -562,6 +594,7 @@ body {
         height: 88%;
         top: 16%;
     }
+
     .trailer-section::after {
         transform: skewY(-9.5deg);
         height: 82%;
@@ -590,12 +623,13 @@ body {
     }
 
     .more-info-container {
+        padding-top: 5rem;
         grid-template-columns: 1fr;
-
     }
 
-    .more-info-container__info-wrapper {
-        justify-self: center;
+    .more-info-container__close-button {
+        right: 2rem;
+        top: 1rem;
     }
 
     .more-info-container__plot-and-poster-wrapper {
@@ -614,9 +648,18 @@ body {
 @media screen and (max-width: 650px) {
 
     .wrapper {
-        padding: .5rem .5rem;
-        margin: 0 auto;
+        max-width: 95%;
+        margin: auto;
+        padding: 0;
     }
+
+    .header__title--orange {
+        background-color: var(--orange);
+        font-size: 20vw;
+        padding: 1rem 1rem 0 1rem;
+        margin: .5rem;
+    }
+
 
     .toplist-section,
     .search-section,
@@ -627,11 +670,15 @@ body {
     }
 
     .trailer-section {
-        padding: 2rem .5rem;
+        padding: 5rem .5rem;
+    }
+
+    .trailer-section__video-player {
+        width: 98%;
     }
 
     .more-info-container {
-        padding: 1rem;
+        padding: 5rem 1rem 1rem 1rem;
         margin: 0.5rem;
     }
 
@@ -652,10 +699,42 @@ body {
 
 @media screen and (max-width: 400px) {
 
-    .notification-container__notification {
-        font-size: 1.5rem;
+    .utility-bar__notification {
+        font-size: 1.2rem;
     }
+
     .footer__home-navigation {
         padding: 1rem;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .utility-bar__searchbar {
+        width: 60vw;
+    }
+
+    .utility-bar__navigation-button {
+        width: 30vw;
+    }
+}
+
+@media screen and (max-width: 310px) {
+
+    .toplist-section,
+    .search-section,
+    .favorite-section {
+        grid-template-columns: 1fr;
+        grid-template-rows: 100px repeat(8, 1fr) 100px;
+        grid-template-areas:
+            "title "
+            "movie"
+            "movie"
+            "movie"
+            "movie"
+            "movie"
+            "movie"
+            "movie"
+            "movie"
+            "pagination";
     }
 }
